--- a/src/main/resources/templates/cardgame.html
+++ b/src/main/resources/templates/cardgame.html
@@ -4,44 +4,23 @@
     <meta charset="UTF-8">
     <title>Card Game Pokémon</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&family=Ubuntu:ital,wght@0,300;0,700;1,400&display=swap');
-         p,h,a,span,td,th{
-                font-family: 'Ubuntu', sans-serif;
-                font-weight: 400px;
-         }
+    <link rel="stylesheet" type="text/css" th:href="@{/style.css}">
+    <script type="text/javascript" th:src="@{/script.js}"></script>
 
-        .status{
-            background-color: #d2effc;
-            padding: 3px;
-            border:2px solid #081e66;
-            border-radius: 9px;
-        }
-        thead,th{ background-color: #123b3b; color: #f5f7f7; }
-        .tableFixHead          { overflow: auto; height: 500px; }
-        .tableFixHead thead th { position: sticky; top: 0; z-index: 1; }
-        .table-striped>tbody>tr:nth-child(odd)>td,
-        .table-striped>tbody>tr:nth-child(odd)>th {background-color: #c8dbd5;}
-
-         .font-footer,a{
-            font-size:1rem;
-            color: #000000;
-        }
-    </style>
 </head>
-<body>
+<body th:onload="compareAndStyle()" th:style="'background-image:url(' + @{/bg.jpg} + '); background-repeat: no-repeat; background-attachment: scroll; background-size: cover;'">
     <nav class="navbar navbar-light bg-light mr-auto py-1 px-2 fixed-top">
         <div class="d-flex ml-5 align-items-center">
             <img src="https://freepikpsd.com/file/2019/10/pokemon-card-back-png-1-Transparent-Images.png" width="30" height="30" class="d-inline-block align-top" alt="">
-            <a class="navbar-brand mx-2" href="#">Pokémon Card Battles</a>
+            <a class="navbar-brand mx-2" th:href="@{'/play'}">Pokémon Card Battles</a>
         </div>
         <div class="d-flex mr-5">
-            <a class="nav-link active" th:href="@{'/play'}">Play <span class="sr-only">(current)</span></a>
-            <a class="nav-link" th:href="@{'/cards'}">Cards</a>
+            <a class="nav-link active fweight" th:href="@{'/play'}">Play <span class="sr-only">(current)</span></a>
+            <a class="nav-link fweight" th:href="@{'/cards'}">Cards</a>
         </div>
     </nav>
-    <div class="container mt-5 mb-3 mx-auto ">
-        <h1 class="mt-5" align="center" >Pokémon Card Battles</h1>
+    <div class="container mt-5 mb-3 mx-auto cont ">
+        <h1 class="mt-5 fweight" align="center" >Pokémon Card Battles</h1>
         <form th:action="@{play}" th:object="${CardGameDTO}" method="post">
             <div class="row mt-3">
                 <div class="col">
@@ -51,112 +30,116 @@
                     <input type="number" th:field="${CardGameDTO.cardP2}" class="form-control" placeholder="# Player 2 Card #" name="p2Card">
                 </div>
             </div>
-            <div class=" row d-flex justify-content-center mt-3">
-                    <p>If one of the fields above is empty, the cards will be generated randomly</p>
-                    <div class="d-grid gap-2 col-12 mx-auto my-3">
-                        <button class="btn btn-primary" type="submit">NEW ROUND</button>
+            <p class="mt-2" align="center">If one of the fields above is empty, the cards will be generated randomly</p>
+            <div class="row d-flex justify-content-center mt-1 mb-3 mx-auto">
+                    <div class=" mx-auto d-flex justify-content-center">
+                        <button class="btn btn-primary btn-size " type="submit" th:onclick="compareAndStyle()">NEW ROUND</button>
                     </div>
             </div>
         </form>
 <!--        CARD 1               -->
         <div  class="row align-items-center ">
-            <div class="card col-md-5 mx-auto" style="width: 18rem;">
+            <div class="card col-md-5 ml-5 " style="width: 18rem;"  id="card1">
 <!--                <img src="..." class="card-img-top" alt="...">-->
-                <div class="card-body">
+                <div class="card-body" >
                     <h3 class="card-title" align="center" th:text="${CardGameLastItem.pkmCardPlayer1.name}"></h3>
                     <div class="d-flex justify-content-center ">
-                        <p class="mr-3 font-weight-bold justify-content-center ">National Dex:</p>
+                        <p class="mr-3 font-weight-bold ">National Dex:</p>
                         <p class="card-title" th:text="${CardGameLastItem.pkmCardPlayer1.nationalDex}"></p>
                     </div>
                    <div class="status">
                        <div class="d-flex mx-1 ">
                            <p class="mr-3 font-weight-bold col-9 justify-content-center">Hp: </p>
-                           <p class="card-text font-weight-bold col-3 justify-content-left" th:text="${CardGameLastItem.pkmCardPlayer1.attributes.hp}"> </p>
+                           <p id="p1HP"class="card-text font-weight-bold col-3 justify-content-center" th:text="${CardGameLastItem.pkmCardPlayer1.attributes.hp}"> </p>
                        </div>
                        <div class="d-flex  mx-1">
                            <p class="mr-3 font-weight-bold col-9 justify-content-center">Attack: </p>
-                           <p class="card-text font-weight-bold col-3 justify-content-left" th:text="${CardGameLastItem.pkmCardPlayer1.attributes.attack}"> </p>
+                           <p id="p1A" class="card-text font-weight-bold col-3 justify-content-center" th:text="${CardGameLastItem.pkmCardPlayer1.attributes.attack}"> </p>
                        </div>
                        <div class="d-flex mx-1">
                            <p class="mr-3 font-weight-bold col-9 justify-content-center">Defense: </p>
-                           <p class="card-tex font-weight-bold col-3 justify-content-left" th:text="${CardGameLastItem.pkmCardPlayer1.attributes.defense}"> </p>
+                           <p id="p1D" class="card-tex font-weight-bold  col-3 justify-content-center" th:text="${CardGameLastItem.pkmCardPlayer1.attributes.defense}"> </p>
                        </div>
                        <div class="d-flex mx-1">
                            <p class="mr-3 font-weight-bold col-9 justify-content-center">Special Attack: </p>
-                           <p class="card-text font-weight-bold col-3 justify-content-left" th:text="${CardGameLastItem.pkmCardPlayer1.attributes.specialAttack}"> </p>
+                           <p id="p1SA" class="card-text font-weight-bold  col-3 justify-content-center" th:text="${CardGameLastItem.pkmCardPlayer1.attributes.specialAttack}"> </p>
                        </div>
                        <div class="d-flex mx-1">
                            <p class="mr-3 font-weight-bold col-9 justify-content-center">Special Defense: </p>
-                           <p class="card-text font-weight-bold col-3 justify-content-left "  th:text="${CardGameLastItem.pkmCardPlayer1.attributes.specialDefense}"> </p>
+                           <p id="p1SD" class="card-text font-weight-bold col-3 justify-content-center "  th:text="${CardGameLastItem.pkmCardPlayer1.attributes.specialDefense}"> </p>
                        </div>
                        <div class="d-flex mx-1">
                            <p class="mr-3 font-weight-bold col-9 justify-content-center">Speed: </p>
-                           <p class="card-text font-weight-bold col-3 justify-content-left" th:text="${CardGameLastItem.pkmCardPlayer1.attributes.speed}"> </p>
+                           <p id="p1S" class="card-text  font-weight-bold col-3 justify-content-center" th:text="${CardGameLastItem.pkmCardPlayer1.attributes.speed}"> </p>
                        </div>
                    </div>
-                    <div class="d-flex justify-content-center">
-                        <p class="mr-3 font-weight-bold mt-2">Total: </p>
-                        <p class="card-text font-weight-bold mt-2" align="left" th:text="${CardGameLastItem.pkmCardPlayer1.total}"> </p>
-                        <!--                        <p class="card-text" align="left" th:text="${CardGameLastItem.total}"> </p>-->
+                    <div class="d-flex mt-2 mb-0 justify-content-center">
+                        <p class="mr-3 font-weight-bold ">Total: </p>
+                        <p class="card-text" align="left" th:text="${CardGameLastItem.pkmCardPlayer1.total}"> </p>
                     </div>
                 </div>
             </div>
-            <div class="col-md-2" align="center">
+            <div class="col-md-1" align="center">
+                <p id="p1" style="display:none;"th:text="${CardGameLastItem.scoreP1}" > </p>
                 <h2 class="font-weight-bold display-3"> X </h2>
+                <p id="p2" style="display:none;"th:text="${CardGameLastItem.scoreP2}" > </p>
             </div>
 <!--            CARD 2          -->
-            <div class="card col-md-5 mx-auto" style="width: 18rem;">
+            <div class="card col-md-5 mr-3" id="card2"  >
 <!--                <img src="..." class="card-img-top" alt="...">-->
-                <div class="card-body">
+                <div class="card-body" >
                     <h3 class="card-title" align="center" th:text="${CardGameLastItem.pkmCardPlayer2.name}"></h3>
-                    <div class="d-flex">
-                        <p class="mr-3 font-weight-bold justify-content-center">National Dex:</p>
+                    <div class="d-flex justify-content-center">
+                        <p class="mr-3 font-weight-bold">National Dex:</p>
                         <p class="card-title" th:text="${CardGameLastItem.pkmCardPlayer2.nationalDex}"></p>
                     </div>
                     <div class="status">
                         <div class="d-flex mx-1">
                             <p class="font-weight-bold col-9 justify-content-center">Hp: </p>
-                            <p class="card-text font-weight-bold col-3 justify-content-left" th:text="${CardGameLastItem.pkmCardPlayer2.attributes.hp}"> </p>
+                            <p id="p2HP" class="card-text font-weight-bold col-3 justify-content-center" th:text="${CardGameLastItem.pkmCardPlayer2.attributes.hp}"> </p>
                         </div>
                         <div class="d-flex mx-1">
                             <p class="font-weight-bold col-9 justify-content-center">Attack: </p>
-                            <p class="card-text font-weight-bold col-3 justify-content-left"  th:text="${CardGameLastItem.pkmCardPlayer2.attributes.attack}"> </p>
+                            <p id="p2A" class="card-text font-weight-bold  col-3 justify-content-center"  th:text="${CardGameLastItem.pkmCardPlayer2.attributes.attack}"> </p>
                         </div>
                         <div class="d-flex mx-1" >
                             <p class="font-weight-bold col-9 justify-content-center">Defense: </p>
-                            <p class="card-text font-weight-bold col-3 justify-content-left" th:text="${CardGameLastItem.pkmCardPlayer2.attributes.defense}"> </p>
+                            <p id="p2D" class="card-text font-weight-bold  col-3 justify-content-center" th:text="${CardGameLastItem.pkmCardPlayer2.attributes.defense}"> </p>
                         </div>
                         <div class="d-flex mx-1">
                             <p class="font-weight-bold col-9 justify-content-center">Special Attack: </p>
-                            <p class="card-text font-weight-bold col-3 justify-content-left" th:text="${CardGameLastItem.pkmCardPlayer2.attributes.specialAttack}"> </p>
+                            <p id="p2SA" class="card-text font-weight-bold col-3 justify-content-center" th:text="${CardGameLastItem.pkmCardPlayer2.attributes.specialAttack}"> </p>
                         </div>
                         <div class="d-flex mx-1">
                             <p class="font-weight-bold col-9 justify-content-center">Special Defense: </p>
-                            <p class="card-text font-weight-bold col-3 justify-content-left" th:text="${CardGameLastItem.pkmCardPlayer2.attributes.specialDefense}"> </p>
+                            <p id="p2SD" class="card-text font-weight-bold col-3 justify-content-center" th:text="${CardGameLastItem.pkmCardPlayer2.attributes.specialDefense}"> </p>
                         </div>
-                        <div class="d-flex align-items-center mx-1">
+                        <div class="d-flex  mx-1">
                             <p class="font-weight-bold col-9 justify-content-center">Speed: </p>
-                            <p class="card-text font-weight-bold col-3 justify-content-left" th:text="${CardGameLastItem.pkmCardPlayer2.attributes.speed}"> </p>
+                            <p id="p2S" class="card-text font-weight-bold col-3 justify-content-center" th:text="${CardGameLastItem.pkmCardPlayer2.attributes.speed}"> </p>
                         </div>
                     </div>
 
-                    <div class="d-flex justify-content-center">
-                        <p class="mr-3 font-weight-bold mt-2">Total: </p>
-                        <p class="card-text font-weight-bold mt-2" align="left" th:text="${CardGameLastItem.pkmCardPlayer2.total}"> </p>
+                    <div class="d-flex mt-2 mb-0 justify-content-center">
+                        <p class="mr-3 font-weight-bold ">Total: </p>
+                        <p class="card-text" align="left" th:text="${CardGameLastItem.pkmCardPlayer2.total}"> </p>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div class="mt-3">
-            <h2 align="center">Total Games Wins</h2>
-            <div class="d-flex justify-content-center">
-                <p class="mx-5">Player 1: <span th:text="${resultsDTO.totalP1}" class="font-weight-bold"></span></p>
-                <p class="mx-5">Player 2: <span th:text="${resultsDTO.totalP2}" class="font-weight-bold"></span></p>
+        <div class="my-5 scoreboard mx-auto">
+            <h4 align="center">Scoreboard</h4>
+            <div class="d-flex row justify-content-center">
+                <p class="mx-5 font-weight-bold ">Player 1</p>
+                <span th:text="${resultsDTO.totalP1}" class="mx-3"></span>
+                <p class="mx-1"> X </p>
+                <span th:text="${resultsDTO.totalP2}" class="mx-3"></span>
+                <p class="mx-5 font-weight-bold">Player 2</p>
             </div>
         </div>
 
-        <div class="tableFixHead mt-5">
+        <div class="tableFixHead mt-3">
             <h2 align="center">Games Results</h2>
             <table class="table table-striped">
                 <thead>
@@ -167,7 +150,7 @@
                         <th scope="col">Score P1</th>
                         <th scope="col">Score P2</th>
                         <th scope="col">Winner</th>
-                        <th scope="col">Loser</th>
+<!--                        <th scope="col">Loser</th>-->
                     </tr>
                 </thead>
                 <tbody>
@@ -178,7 +161,7 @@
                         <td align="center" th:text="${CardGame.scoreP1}"></td>
                         <td align="center" th:text="${CardGame.scoreP2}"></td>
                         <td align="center" class="font-weight-bold" th:text="${CardGame.winner}"></td>
-                        <td align="center" th:text="${CardGame.loser}"></td>
+<!--                        <td align="center" th:text="${CardGame.loser}"></td>-->
                     </tr>
 
                 </tbody>
@@ -194,21 +177,23 @@
             </footer>
 <!-
         </div>
-
-
     </div>
-    <footer class="mt-2" align="center" >
-        <p class="font-weight-bold">Shortcuts:</p>
-        <div class=" font-footer mt-1 mx-3 d-inline p-2">
-            <a th:href="@{'/cards/page/1'}">Kanto</a>
-            <a th:href="@{'/cards/page/11'}">Johto</a>
-            <a th:href="@{'/cards/page/16'}">Hoenn</a>
-            <a th:href="@{'/cards/page/24'}">Sinnoh</a>
-            <a th:href="@{'/cards/page/30'}">Unova</a>
-            <a th:href="@{'/cards/page/39'}">Alola</a>
-            <a th:href="@{'/cards/page/48'}">Galar</a>
+    <footer class="mt-2 mb-3" align="center" >
+        <p class="font-weight-bold my-0">Shortcuts:</p>
+        <div class=" font-footer mt-0 mx-3 ">
+            <a class="mx-3 regions" th:href="@{'/cards/page/1'}">Kanto</a>
+            <a class="mx-3 regions" th:href="@{'/cards/page/7'}">Johto</a>
+            <a class="mx-3 regions" th:href="@{'/cards/page/11'}">Hoenn</a>
+            <a class="mx-3 regions" th:href="@{'/cards/page/16'}">Sinnoh</a>
+            <a class="mx-3 regions" th:href="@{'/cards/page/20'}">Unova</a>
+            <a class="mx-3 regions" th:href="@{'/cards/page/26'}">Kalos</a>
+            <a class="mx-3 regions" th:href="@{'/cards/page/29'}">Alola</a>
+            <a class="mx-3 regions" th:href="@{'/cards/page/32'}">Galar</a>
         </div>
     </footer>
 
 </body>
 </html>
+<script>
+
+</script>
