--- a/src/main/resources/templates/pkmcards.html
+++ b/src/main/resources/templates/pkmcards.html
@@ -4,55 +4,31 @@
     <meta charset="UTF-8">
     <title>Card Game Pokémon</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&family=Ubuntu:ital,wght@0,300;0,700;1,400&display=swap');
-         p,h,a,span,td,th{
-            font-family: 'Ubuntu', sans-serif;
-            font-weight: 400px;
-         }
-
-        .status{
-            background-color: #d2effc;
-            padding: 3px;
-            border:2px solid #081e66;
-            border-radius: 9px;
-        }
-        th { background:#123b3b; }
-        .bg-table-head,thead,th{ background: #123b3b; color: #f5f7f7; font-size:1rem;}
-        .tableFixHead          { overflow: auto; height: 500px; }
-        .tableFixHead thead th { position: sticky; top: 0; z-index: 1;  }
-        .table-striped>tbody>tr:nth-child(odd)>td,
-        .table-striped>tbody>tr:nth-child(odd)>th {background-color: #c8dbd5;}
-
-        .font-footer,a{
-            font-size:1rem;
-            color: #000000;
-        }
-
-    </style>
+    <link rel="stylesheet" type="text/css" th:href="@{/style.css}">
 </head>
-<body>
+<body th:style="'background-image:url(' + @{/bg.jpg} + '); background-repeat: no-repeat; background-attachment: scroll; background-size: cover;'">
 <nav class="navbar navbar-light bg-light mr-auto py-1 px-2 fixed-top">
     <div class="d-flex ml-5 align-items-center">
         <img src="https://freepikpsd.com/file/2019/10/pokemon-card-back-png-1-Transparent-Images.png" width="30" height="30" class="d-inline-block align-top" alt="">
-        <a class="navbar-brand mx-2" href="#">Pokémon Card Battles</a>
+        <a class="navbar-brand mx-2 fweight" href="#">Pokémon Card Battles</a>
     </div>
     <div class="d-flex mr-5">
-        <a class="nav-link active" th:href="@{'/play'}">Play <span class="sr-only">(current)</span></a>
-        <a class="nav-link" th:href="@{'/cards'}">Cards</a>
+        <a class="nav-link active fweight" th:href="@{'/play'}">Play <span class="sr-only">(current)</span></a>
+        <a class="nav-link fweight" th:href="@{'/cards'}">Cards</a>
     </div>
 </nav>
-<div class="container mt-5 mb-3 mx-auto ">
-    <h1 class="" align="center" >Pokémon Cards List </h1>
+<div class="container mt-5 mb-3 mx-auto cont ">
+    <h1 class="fweight" align="center" >Pokémon Cards List </h1>
     <div class="tableFixHead">
         <table class="table table-striped">
             <thead>
             <tr align="center" class="bg-info bg-table-head" >
-                <th scope="col" class="align-middle">#</th>
+                <th scope="col" class="align-middle">#Id</th>
+                <th scope="col" class="align-middle">Pokédex</th>
                 <th scope="col" class="align-middle">Name</th>
                 <th scope="col" class="align-middle">Average</th>
                 <th scope="col" class="align-middle">Total</th>
-                <th scope="col" class="align-middle">Hp</th>
+                <th scope="col" class="align-middle">HP</th>
                 <th scope="col" class="align-middle">Attack</th>
                 <th scope="col" class="align-middle">Defense</th>
                 <th scope="col" class="align-middle">Special Attack</th>
@@ -62,7 +38,7 @@
             </thead>
             <tbody>
             <tr th:each="PkmCardModel : ${pkmCards}">
-<!--                <td align="center" th:text="${PkmCardModel.id}"></td>-->
+                <td align="center" th:text="${PkmCardModel.id}"></td>
                 <td align="center" th:text="${PkmCardModel.nationalDex}"></td>
                 <td align="center" class="font-weight-bold" th:text="${PkmCardModel.name}"></td>
                 <td align="center" th:text="${PkmCardModel.average}"></td>
@@ -85,21 +61,25 @@
                 &nbsp; &nbsp;
             </span>
         </footer>
+
+
+    <footer class="mt-2 mb-3 footclass" align="center">
+        <p class="font-weight-bold my-0">Shortcuts:</p>
+        <div class=" font-footer mt-0 mx-3 ">
+            <a class="mx-3 regions" th:href="@{'/cards/page/1'}">Kanto</a>
+            <a class="mx-3 regions" th:href="@{'/cards/page/7'}">Johto</a>
+            <a class="mx-3 regions" th:href="@{'/cards/page/11'}">Hoenn</a>
+            <a class="mx-3 regions" th:href="@{'/cards/page/16'}">Sinnoh</a>
+            <a class="mx-3 regions" th:href="@{'/cards/page/20'}">Unova</a>
+            <a class="mx-3 regions" th:href="@{'/cards/page/26'}">Kalos</a>
+            <a class="mx-3 regions" th:href="@{'/cards/page/29'}">Alola</a>
+            <a class="mx-3 regions" th:href="@{'/cards/page/32'}">Galar</a>
+        </div>
+
+    </footer>
 </div>
 
-<footer class="mt-2 d-flex align-items-center" align="center">
-    <p class="font-weight-bold">Shortcuts:</p>
-    <div class=" font-footer mt-0 mx-3 ">
-        <a th:href="@{'/cards/page/1'}">Kanto</a>
-        <a th:href="@{'/cards/page/11'}">Johto</a>
-        <a th:href="@{'/cards/page/16'}">Hoenn</a>
-        <a th:href="@{'/cards/page/24'}">Sinnoh</a>
-        <a th:href="@{'/cards/page/30'}">Unova</a>
-        <a th:href="@{'/cards/page/39'}">Alola</a>
-        <a th:href="@{'/cards/page/48'}">Galar</a>
-    </div>
 
-</footer>
 
 </body>
 </html>
