--- a/src/main/resources/templates/cardgame.html
+++ b/src/main/resources/templates/cardgame.html
@@ -24,10 +24,10 @@
         <form th:action="@{play}" th:object="${CardGameDTO}" method="post">
             <div class="row mt-3">
                 <div class="col">
-                    <input type="number" th:field="${CardGameDTO.cardP1}" class="form-control" placeholder="# Player 1 Card # " name="p1Card">
+                    <input type="number" th:field="${CardGameDTO.cardP1}" class="form-control" placeholder="# Player 1 Card # " name="cardP1">
                 </div>
                 <div class="col">
-                    <input type="number" th:field="${CardGameDTO.cardP2}" class="form-control" placeholder="# Player 2 Card #" name="p2Card">
+                    <input type="number" th:field="${CardGameDTO.cardP2}" class="form-control" placeholder="# Player 2 Card #" name="cardP2">
                 </div>
             </div>
             <p class="mt-2" align="center">If one of the fields above is empty, the cards will be generated randomly</p>
