--- a/src/main/resources/templates/cardgame.html
+++ b/src/main/resources/templates/cardgame.html
@@ -11,7 +11,7 @@
 <body th:onload="compareAndStyle()" th:style="'background-image:url(' + @{/bg.jpg} + '); background-repeat: no-repeat; background-attachment: scroll; background-size: cover;'">
     <nav class="navbar navbar-light bg-light mr-auto py-1 px-2 fixed-top">
         <div class="d-flex ml-5 align-items-center">
-            <img src="https://freepikpsd.com/file/2019/10/pokemon-card-back-png-1-Transparent-Images.png" width="30" height="30" class="d-inline-block align-top" alt="">
+            <img th:src="@{/pkmcard.png}" width="30" height="30" class="d-inline-block align-top" alt="">
             <a class="navbar-brand mx-2" th:href="@{'/play'}">Pokémon Card Battles</a>
         </div>
         <div class="d-flex mr-5">
@@ -175,7 +175,9 @@
                 &nbsp; &nbsp;
                 </span>
             </footer>
-<!-
+<!--            <div class=" mx-auto d-flex justify-content-center">-->
+<!--                <button class="btn btn-secondary btn-size " type="submit">RESET GAMES</button>-->
+<!--            </div>-->
         </div>
     </div>
     <footer class="mt-2 mb-3" align="center" >
