--- a/src/main/resources/templates/pkmcards.html
+++ b/src/main/resources/templates/pkmcards.html
@@ -9,7 +9,7 @@
 <body th:style="'background-image:url(' + @{/bg.jpg} + '); background-repeat: no-repeat; background-attachment: scroll; background-size: cover;'">
 <nav class="navbar navbar-light bg-light mr-auto py-1 px-2 fixed-top">
     <div class="d-flex ml-5 align-items-center">
-        <img src="https://freepikpsd.com/file/2019/10/pokemon-card-back-png-1-Transparent-Images.png" width="30" height="30" class="d-inline-block align-top" alt="">
+        <img th:src="@{/pkmcard.png}" width="30" height="30" class="d-inline-block align-top" alt="">
         <a class="navbar-brand mx-2 fweight" href="#">Pokémon Card Battles</a>
     </div>
     <div class="d-flex mr-5">
